--- a/VotoElectronico.MVC/wwwroot/css/site.css
+++ b/VotoElectronico.MVC/wwwroot/css/site.css
@@ -1,31 +1,21 @@
-html {
-  font-size: 14px;
-}
-
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
-
-html {
-  position: relative;
-  min-height: 100%;
-}
-
 body {
-  margin-bottom: 60px;
+    background-color: #f5f7fa;
+    font-family: 'Segoe UI', Tahoma, sans-serif;
 }
 
-.form-floating > .form-control-plaintext::placeholder, .form-floating > .form-control::placeholder {
-  color: var(--bs-secondary-color);
-  text-align: end;
+.navbar-cne {
+    background: linear-gradient(90deg, #003366, #0059b3);
 }
 
-.form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
-  text-align: start;
+    .navbar-cne .nav-link {
+        color: #ffffff !important;
+        font-weight: 500;
+    }
+
+        .navbar-cne .nav-link:hover {
+            text-decoration: underline;
+        }
+
+footer {
+    font-size: 0.9rem;
 }
